# Apartment-Scraper

./: .gitignore  Makefile  README.md  communities.toml  index.html  pyproject.toml  run.py  scrapy.cfg
.github/workflows/: build-site.yml  daily-scrape.yml  preview-site.yml  scrape-data.yml
apartment_scraper/: items.py  pipelines.py  settings.py  utils.py
apartment_scraper/spiders/: __init__.py  avalon.py  entrata.py  equity.py  example_apartment.py  g5rainmaker.py  jonah.py  rentcafe.py  rentcafe_feed.py
assets/: index-D-RrgpI1.js
data/: .gitkeep  availability.json
pr-preview/pr-2/: index.html
pr-preview/pr-2/assets/: snapshot-DHIn-4kH.js  (+1 more)
pr-preview/pr-4/: index.html
site/: .gitignore  README.md  eleventy.config.js  package-lock.json  package.json
site/lib/: aggregate.js
site/src/: index.njk  snapshot.njk  snapshots.njk
snapshots/: index.html
snapshots/2026-07-05/: index.html
snapshots/2026-07-06/: index.html
snapshots/2026-07-07/: index.html
snapshots/2026-07-08/: index.html
snapshots/2026-07-09/: index.html
snapshots/2026-07-10/: index.html
snapshots/2026-07-11/: index.html
snapshots/2026-07-12/: index.html
snapshots/2026-07-13/: index.html
snapshots/2026-07-14/: index.html
snapshots/2026-07-15/: index.html
snapshots/2026-07-16/: index.html
snapshots/2026-07-17/: index.html
snapshots/2026-07-18/: index.html
snapshots/2026-07-19/: index.html
snapshots/2026-07-20/: index.html
snapshots/2026-07-21/: index.html
snapshots/2026-07-22/: index.html
snapshots/2026-07-23/: index.html
snapshots/2026-07-24/: index.html
(+47 files in other folders)
